update times logging, stacking

--- a/ipynbs/agent_test.ipynb
+++ b/ipynbs/agent_test.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/benjamin/miniconda3/envs/rew_curr/lib/python3.10/site-packages/glfw/__init__.py:916: GLFWError: (65544) b'X11: The DISPLAY environment variable is missing'\n",
-      "  warnings.warn(message, GLFWError)\n",
-      "<frozen importlib._bootstrap>:283: DeprecationWarning: the load_module() method is deprecated and slated for removal in Python 3.12; use exec_module() instead\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"/home/benjamin/RewardCurriculum/\")\n",
@@ -39,12 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "os.chdir(\"/home/benjamin/RewardCurriculum\")\n",
-    "folder_path = \"/home/benjamin/RewardCurriculum/results/panda_pick_and_place_obstacle_long/2024-05-21_17-06-37_PandaMultiRewardPickAndPlaceObstacleDense-v3_tqc_sacx_4\"\n",
+    "folder_path = \"/home/benjamin/RewardCurriculum/results/panda_slide_long/2024-09-13_11-50-10_PandaMultiRewardSlideDense-v3_tqc_manualtask_0\"\n",
     "\n",
     "args = Namespace()\n",
     "args.env_name = json.load(open(os.path.join(folder_path, \"config.json\"), \"r\"))[\"environment\"][\"env_name\"]\n",
@@ -61,9 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "pybullet build time: Sep 15 2023 11:13:12\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -85,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +107,7 @@
     "    while not terminated:\n",
     "        # obs = obs.reshape(1, -1)\n",
     "        # print(obs)\n",
-    "        act = learner.predict(obs, weights=weights)[0]\n",
+    "        act = learner.predict(obs, weights=weights, deterministic=True)[0]\n",
     "\n",
     "        obs, reward, terminated, info = env.step(act)\n",
     "        # print(reward)\n",
@@ -128,15 +125,31 @@
     "        \n",
     "    out.release()\n",
     "    \n",
-    "    os.system(f\"ffmpeg -hide_banner -loglevel error -i {video_output_path} -vcodec libx264 video.mp4\")\n",
+    "    os.system(f\"ffmpeg -hide_banner -loglevel error -r 25 -i {video_output_path} -vcodec libx264 video.mp4\")\n",
     "    os.system(f\"mv video.mp4 {video_output_path}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/benjamin/miniconda3/envs/rew_curr/lib/python3.10/site-packages/gymnasium/utils/passive_env_checker.py:164: UserWarning: \u001b[33mWARN: The obs returned by the `reset()` method was expecting numpy array dtype to be float32, actual type: float64\u001b[0m\n",
+      "  logger.warn(\n",
+      "/home/benjamin/miniconda3/envs/rew_curr/lib/python3.10/site-packages/gymnasium/utils/passive_env_checker.py:188: UserWarning: \u001b[33mWARN: The obs returned by the `reset()` method is not within the observation space.\u001b[0m\n",
+      "  logger.warn(f\"{pre} is not within the observation space.\")\n",
+      "/home/benjamin/miniconda3/envs/rew_curr/lib/python3.10/site-packages/gymnasium/utils/passive_env_checker.py:164: UserWarning: \u001b[33mWARN: The obs returned by the `step()` method was expecting numpy array dtype to be float32, actual type: float64\u001b[0m\n",
+      "  logger.warn(\n",
+      "/home/benjamin/miniconda3/envs/rew_curr/lib/python3.10/site-packages/gymnasium/utils/passive_env_checker.py:188: UserWarning: \u001b[33mWARN: The obs returned by the `step()` method is not within the observation space.\u001b[0m\n",
+      "  logger.warn(f\"{pre} is not within the observation space.\")\n",
+      "/home/benjamin/miniconda3/envs/rew_curr/lib/python3.10/site-packages/gymnasium/utils/passive_env_checker.py:275: UserWarning: \u001b[33mWARN: The reward returned by `step()` must be a float, int, np.integer or np.floating, actual type: <class 'numpy.ndarray'>\u001b[0m\n",
+      "  logger.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -147,13 +160,13 @@
     {
      "data": {
       "text/html": [
-       "<video alt=\"test\" controls><source src=\"/home/benjamin/RewardCurriculum/results/panda_pick_and_place_obstacle_long/2024-05-21_17-06-37_PandaMultiRewardPickAndPlaceObstacleDense-v3_tqc_sacx_4/video.mp4\" type=\"video/mp4\"></video>"
+       "<video alt=\"test\" controls><source src=\"/home/benjamin/RewardCurriculum/results/panda_slide_long/2024-09-13_11-50-10_PandaMultiRewardSlideDense-v3_tqc_manualtask_0/video.mp4\" type=\"video/mp4\"></video>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
