commit before publishing

--- a/ipynbs/agent_test.ipynb
+++ b/ipynbs/agent_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,8 @@
     "from stable_baselines3.common.vec_env import SubprocVecEnv, DummyVecEnv\n",
     "import json\n",
     "import numpy as np\n",
+    "from collections import defaultdict\n",
+    "import tqdm\n",
     "\n",
     "import os\n",
     "from copy import deepcopy\n",
@@ -29,12 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "os.chdir(\"/home/benjamin/RewardCurriculum\")\n",
-    "folder_path = \"/home/benjamin/RewardCurriculum/results/panda_slide_long/2024-09-13_11-50-10_PandaMultiRewardSlideDense-v3_tqc_manualtask_0\"\n",
+    "folder_path = \"/home/benjamin/RewardCurriculum/results/panda_stack_long/2024-10-17_00-06-08_PandaMultiRewardStackDense-v3_tqc_settersolver_2\"\n",
     "\n",
     "args = Namespace()\n",
     "args.env_name = json.load(open(os.path.join(folder_path, \"config.json\"), \"r\"))[\"environment\"][\"env_name\"]\n",
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -82,24 +84,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# learner = config[\"learner_class\"].load(os.path.join(folder_path, \"evaluations\", \"best_model.zip\"), env=env)\n",
     "learner = config[\"learner_class\"].load(os.path.join(folder_path, \"evaluations\", \"best_model.zip\"), env=env)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def record_video(video_output_path, env, learner, task=None):\n",
+    "def record_video(video_output_path, env, learner, task=None, render_success=False, seed=None):\n",
     "    if task is None:\n",
     "        weights = np.zeros((1, learner.scheduler.reward_dim))\n",
     "        weights[:, -1] = 1\n",
+    "    env.seed(seed)\n",
     "    obs = env.reset()\n",
     "\n",
     "    terminated = False\n",
@@ -108,13 +110,26 @@
     "        # obs = obs.reshape(1, -1)\n",
     "        # print(obs)\n",
     "        act = learner.predict(obs, weights=weights, deterministic=True)[0]\n",
-    "\n",
     "        obs, reward, terminated, info = env.step(act)\n",
-    "        # print(reward)\n",
     "        \n",
-    "        render_imgs.append(env.render())\n",
+    "        img = env.render()\n",
+    "        if render_success:\n",
+    "            if reward > 0:\n",
+    "                # make a green border around the image\n",
+    "                img[:8, :, :] = [0, 255, 0]\n",
+    "                img[-8:, :, :] = [0, 255, 0]\n",
+    "                img[:, :8, :] = [0, 255, 0]\n",
+    "                img[:, -8:, :] = [0, 255, 0]\n",
+    "            else:\n",
+    "                # make a red border around the image\n",
+    "                img[:8, :, :] = [0, 0, 255]\n",
+    "                img[-8:, :, :] = [0, 0, 255]\n",
+    "                img[:, :8, :] = [0, 0, 255]\n",
+    "                img[:, -8:, :] = [0, 0, 255]\n",
+    "    \n",
+    "        render_imgs.append(img)\n",
     "        \n",
-    "    print(reward)\n",
+    "    print(reward)    \n",
     "    height, width, _ = render_imgs[0].shape\n",
     "\n",
     "    fourcc = cv2.VideoWriter_fourcc(*\"mp4v\")\n",
@@ -131,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -154,19 +169,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.]\n"
+      "[0.]\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<video alt=\"test\" controls><source src=\"/home/benjamin/RewardCurriculum/results/panda_slide_long/2024-09-13_11-50-10_PandaMultiRewardSlideDense-v3_tqc_manualtask_0/video.mp4\" type=\"video/mp4\"></video>"
+       "<video alt=\"test\" controls><source src=\"/home/benjamin/RewardCurriculum/results/panda_stack_long/2024-10-17_00-06-08_PandaMultiRewardStackDense-v3_tqc_settersolver_2/video.mp4\" type=\"video/mp4\"></video>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,9 +209,521 @@
     "import panda_gym\n",
     "import gymnasium as gym\n",
     "\n",
-    "env = gym.make(\"PandaPickAndPlaceDense-v3\", renderer=\"OpenGL\")\n",
+    "env = gym.make(\"PandaMultiRewardStackDense-v3\", renderer=\"OpenGL\")\n",
     "obs = env.reset()\n",
     "env.render()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Batch video generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/61 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "argv[0]=--background_color_red=0.8745098114013672\n",
+      "argv[1]=--background_color_green=0.21176470816135406\n",
+      "argv[2]=--background_color_blue=0.1764705926179886\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  2%|▏         | 1/61 [00:32<32:45, 32.76s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  3%|▎         | 2/61 [01:05<32:06, 32.65s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  5%|▍         | 3/61 [01:37<31:26, 32.52s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[1.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  7%|▋         | 4/61 [02:10<31:00, 32.64s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  8%|▊         | 5/61 [02:43<30:31, 32.70s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 13%|█▎        | 8/61 [03:16<17:13, 19.51s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 20%|█▉        | 12/61 [03:48<10:56, 13.40s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 21%|██▏       | 13/61 [04:21<13:11, 16.49s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 23%|██▎       | 14/61 [04:54<15:17, 19.52s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[1.]\n",
+      "[1.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 25%|██▍       | 15/61 [05:26<17:04, 22.27s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 28%|██▊       | 17/61 [05:59<14:41, 20.04s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 33%|███▎      | 20/61 [06:31<10:50, 15.86s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 34%|███▍      | 21/61 [07:03<12:32, 18.80s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[1.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 38%|███▊      | 23/61 [07:36<11:25, 18.03s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 49%|████▉     | 30/61 [08:09<05:00,  9.71s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 51%|█████     | 31/61 [08:42<06:08, 12.28s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 52%|█████▏    | 32/61 [09:15<07:20, 15.18s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 57%|█████▋    | 35/61 [09:48<05:53, 13.59s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 61%|██████    | 37/61 [10:21<05:44, 14.36s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[1.]\n",
+      "[1.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 64%|██████▍   | 39/61 [10:54<05:28, 14.94s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|██████▋   | 41/61 [11:27<05:07, 15.39s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 69%|██████▉   | 42/61 [12:00<05:47, 18.27s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 70%|███████   | 43/61 [12:32<06:18, 21.02s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[1.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 74%|███████▍  | 45/61 [13:05<05:09, 19.37s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 79%|███████▊  | 48/61 [13:39<03:26, 15.87s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[1.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 80%|████████  | 49/61 [14:11<03:44, 18.70s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 84%|████████▎ | 51/61 [14:43<02:58, 17.81s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "folder = \"/home/benjamin/RewardCurriculum/results/panda_stack_long\"\n",
+    "folders = [os.path.join(folder, f) for f in os.listdir(folder) if os.path.isdir(os.path.join(folder, f)) and f != \"Videos\"]\n",
+    "\n",
+    "generate_algorithms = [\"settersolver\", \"alpgmm\", \"currot\"]\n",
+    "runs_per_algorithm = 3\n",
+    "\n",
+    "os.makedirs(os.path.join(folder, \"Videos\"), exist_ok=True)\n",
+    "for algorithm in generate_algorithms:\n",
+    "    os.makedirs(os.path.join(folder, \"Videos\", algorithm), exist_ok=True)\n",
+    "    \n",
+    "total_gen_videos = defaultdict(int)\n",
+    "\n",
+    "env = None\n",
+    "seed = 0\n",
+    "\n",
+    "for folder_path in tqdm.tqdm(folders):\n",
+    "    algorithm = folder_path.split(\"_\")[-2]\n",
+    "    \n",
+    "    if algorithm in generate_algorithms:\n",
+    "        args = Namespace()\n",
+    "        args.env_name = json.load(open(os.path.join(folder_path, \"config.json\"), \"r\"))[\"environment\"][\"env_name\"]\n",
+    "        args.seed = json.load(open(os.path.join(folder_path, \"config.json\"), \"r\"))[\"seed\"]\n",
+    "        args.config_path = os.path.join(folder_path, \"config_original.json\")\n",
+    "        args.continue_from = None\n",
+    "\n",
+    "        remaining_args = [\"--environment.wrapper_kwargs.0.reward_threshold\", \"-0.05\"]\n",
+    "        # remaining_args.__setattr__[] = \"-0.05\"\n",
+    "        config = get_config(args.config_path, args, remaining_args)\n",
+    "        config[\"environment\"][\"wrappers\"] += [\"SingleTaskRewardWrapper\"]\n",
+    "        config[\"environment\"][\"wrapper_kwargs\"] += [{}]\n",
+    "        \n",
+    "        if env is None:\n",
+    "            make_env_fn = lambda wrappers, wrapper_kwargs, ignore_keyword=\"ignore\" : get_env(config[\"environment\"][\"env_name\"], wrappers=wrappers, wrapper_kwargs=wrapper_kwargs, ignore_keyword=ignore_keyword)\n",
+    "            env = make_vec_env(make_env_fn, \n",
+    "                        n_envs=config[\"environment\"][\"n_envs\"], \n",
+    "                        env_kwargs={\"wrappers\": config[\"environment\"][\"wrappers\"], \"wrapper_kwargs\": config[\"environment\"][\"wrapper_kwargs\"]},\n",
+    "                        monitor_kwargs={\"allow_early_resets\": True},\n",
+    "                        seed=config[\"seed\"], vec_env_cls=DummyVecEnv)\n",
+    "        \n",
+    "        learner = config[\"learner_class\"].load(os.path.join(folder_path, \"evaluations\", \"best_model.zip\"), env=env)\n",
+    "        \n",
+    "        for _ in range(runs_per_algorithm):\n",
+    "            video_path = os.path.join(folder, \"Videos\", algorithm, f\"video_{total_gen_videos[algorithm]}.mp4\")\n",
+    "            record_video(video_path, env, learner, render_success=True, seed=seed)\n",
+    "            total_gen_videos[algorithm] += 1\n",
+    "            seed += 1\n",
+    "        "
    ]
   }
  ],
